# surf_weather

./: .gitignore  CLAUDE.md  README.md  deploy.sh  docker-compose.yml  perf_test.py
backend/: Dockerfile  pyproject.toml
backend/config/: lakes.yaml
backend/scripts/: lake_data.py
backend/surf_weather/: config.py  main.py
backend/surf_weather.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
backend/surf_weather/models/: combined.py  lake.py  weather.py
backend/surf_weather/providers/: base.py
backend/surf_weather/providers/lake_data/: cuwcd.py  lake_powell.py  registry.py  state_parks.py  usbr.py  usgs.py
backend/surf_weather/providers/weather/: open_meteo.py  registry.py
backend/surf_weather/routers/: lakes.py
backend/surf_weather/services/: aggregator.py  cache.py
backend/tests/: conftest.py
backend/tests/fixtures/: open_meteo_response.json  usgs_dv_response.json
backend/tests/integration/: test_api_routes.py
backend/tests/unit/: test_aggregator.py  test_cache.py  test_config.py  test_cuwcd_provider.py  test_lake_data_script.py  test_lake_powell_provider.py  test_models.py  test_open_meteo_provider.py  test_registry.py  test_state_parks_provider.py  test_usbr_provider.py  test_usgs_provider.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
frontend/src/: App.tsx
frontend/src/api/: client.ts  types.ts
frontend/src/hooks/: useLakeDetail.ts  useLakes.ts  usePreferences.ts  useUserLocation.ts
frontend/src/utils/: distance.ts  formatters.ts  sorting.ts  (+2 more)
(+22 files in other folders)
